# haskell-agi

./: .gitignore  AGI-Function-List.md  AGI-Tests.md  AGI.cabal  Makefile  README.md
Network/: AGI.hs
src/Network/: AGI.hs  AGIEnvironment.hs  AGIFunctions.hs
src/Network/AGI/: Environment.hs  ExecFunctions.hs  Functions.hs  Type.hs
src/Network/Type/: AGI.hs
tests/: BasicCall.hs  Main.hs
tools/: jenkins-build.sh
