Name:           AGI
Category:       Network
Synopsis:       A library for writing AGI scripts for Asterisk
Description:
     Asterisk is an open-source Voice over IP server (VoIP).
     Asterisk provides an Asterisk Gateway Interface (AGI), which
     can be used to write external programs that interact with
     Asterisk. It is typically used for creating Interactive Voice
     Response (IVR) systems.
Version:        3.0
License:        BSD3
License-File:   LICENSE
Author:         Jeremy Shaw
Maintainer:     SeeReason Partners <partners@seereason.com>
Homepage:       http://src.seereason.com/haskell-agi
Extra-Source-Files:
        debian/changelog  debian/compat  debian/control  debian/copyright
        debian/rules
        examples/guessinggame/GuessingGame.hs
        examples/guessinggame/sounds/guessing-game-correct.gsm
        examples/guessinggame/sounds/guessing-game-intro.gsm
        examples/guessinggame/sounds/guessing-game-yay.gsm
        examples/guessinggame/sounds/guessing-game-higher.gsm
        examples/guessinggame/sounds/guessing-game-lower.gsm
        tests/Main.hs
build-type:     Simple
cabal-version:       >= 1.10

flag small_base
  description: Choose the new smaller, split-up base package.

library
    default-language:    Haskell2010
    hs-source-dirs: src

    if flag(small_base)
        build-depends:  base >= 3 && <5, random, unix, network
    else
        build-depends:  base <  3, network

    build-depends:
        parsec
      , mtl
      , syb
      , text
      , containers
      , mmorph

    Exposed-modules:
            Network.AGI
            Network.AGI.Environment
            Network.AGI.ExecFunctions
            Network.AGI.Functions
            Network.AGI.Type

    ghc-options: -Wall -fwarn-tabs

    -- For more complex build options see:
    -- http://www.haskell.org/ghc/docs/latest/html/Cabal/

executable basic-call
    default-language:    Haskell2010
    hs-source-dirs: tests
    main-is:        BasicCall.hs
    build-depends:
          base      >= 4.6 && <4.8
        , AGI       == 3.0.*
        , unix
        , random
        , transformers
        , mtl
        , network

    ghc-options: -Wall -fwarn-tabs

-- source-repository head
--    type:     darcs
--    location: http://src.seereason.com/haskell-agi
